Small fix in Widget Posts A ( box didn't have spacing on the right )

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2750,6 +2750,7 @@ a {
         position: absolute;
         bottom: 25px;
         left: 35px;
+        right: 35px;
         max-height: 95px;
         z-index: 1;
         color: #FFF;
