--- a/assets/sass/modules/_recent-posts.scss
+++ b/assets/sass/modules/_recent-posts.scss
@@ -98,6 +98,7 @@
         position: absolute;
         bottom: 25px;
         left: 35px;
+        right:35px;
         max-height: 95px;
         z-index: 1;
         color: #FFF;
